--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@ function domove(obj)
 			<li>
 				<p></p>
 				<div>
-					<a target="_blank" href=""></a>
-					<span>2011-03-29</span>
+					<a target="_blank" href="./skzt/index.html">色块专题</a>
+					<span>2016-12-28</span>
 				</div>
 			</li>
 			<li>
 				<p></p>
 				<div>
-					<a target="_blank" href=""></a>
-					<span>2011-03-27</span>
+					<a target="_blank" href="./gmtt/index.html">肛门疼痛专题</a>
+					<span>2016-12-27</span>
 				</div>
 			</li>
 			<li>
 				<p></p>
 				<div>
-					<a target="_blank" href=""></a>
-					<span>2011-03-22</span>
+					<a target="_blank" href="./bxzt/index.html">便血专题</a>
+					<span>2016-12-26</span>
 				</div>
 			</li>
 			<li>
