--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>JavaScript 实现的 3D 标签云效果 - www.miaov.com - 妙味课堂</title>
+<title>MySite</title>
 <link rel="stylesheet" type="text/css" href="miaov_style.css" />
 <script type="text/javascript" src="miaov.js"></script>
 </head>
@@ -15,7 +15,7 @@
 	<a href="http://www.csdn.net">csdn</a>
 	<a href="http://www.runoob.com/" class="blue">菜鸟教程</a>
 	<a href="http://www.runoob.com/react/react-tutorial.html">React入门</a>
-	<a href="http://wiki.jikexueyuan.com/list/react/" class="red">React极客学院</a>
+	<a href="http://wiki.jikexueyuan.com/list/react/" class="red">极客学院</a>
 	<a href="http://www.taobao.com" class="yellow">taobao</a>
 	<a href="http://www.jd.com">京东</a>
 	<a href="" class="red">CSS</a>
