--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <title>MySite</title>
 <link rel="stylesheet" type="text/css" href="miaov_style.css" />
 <script type="text/javascript" src="miaov.js"></script>
+<script type="text/javascript">
+	window.onload = function(){
+		document.body.style.display = 'block';
+	}
+</script>
 </head>
 
-<body>
+<body style="display: none;">
 <div id="div1">
 	<a href="http://www.baidu.com">百度</a>
 	<a href="http://www.iqiyi.com" class="red">爱奇艺</a>
