--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<a href="https://20103431.github.io/skzt/index.html" class="blue">色块专题</a>
 	<a href="">W3C</a>
 	<a href="">石川</a>
-	<a href="https://20103431.github.io/gmtt/index.html" class="yellow">肛门疼痛专题</a>
+	<a href="https://20103431.github.io/gmtt/index.html" class="yellow">肛门疼痛</a>
 	<a href="">blue</a>
 </div>
 <p>Welcome：<a href="">MySite</a></p>
