--- a/yhz/index.html
+++ b/yhz/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link type="text/css" rel="stylesheet" href="css/style.css" />
-<script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
+<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script type="text/javascript" src="./js/js.js"></script>
 </head>
 <body>
@@ -568,7 +568,7 @@
 								<div class="ys_list_t">
 									<a href=""><img src="./images/sy_xqg.jpg" /></a>
 									<div class="ys_list_txt fr">
-										<p>许根其  主任医生</p>
+										<p><a href="">许根其  主任医生</a></p>
 										<p>上海医博肛泰医院 肛肠科</p>
 									</div>
 									<div class="clear"></div>
@@ -583,7 +583,7 @@
 								<div class="ys_list_t">
 									<a href=""><img src="./images/sy_zll.jpg" /></a>
 									<div class="ys_list_txt fr">
-										<p>张莉里  副主任医师</p>
+										<p><a href="">张莉里  副主任医师</a></p>
 										<p>上海医博肛泰医院 肛肠科</p>
 									</div>
 									<div class="clear"></div>
@@ -598,7 +598,7 @@
 								<div class="ys_list_t">
 									<a href=""><img src="./images/sy_yjq.jpg" /></a>
 									<div class="ys_list_txt fr">
-										<p>尹吉庆  科主任</p>
+										<p><a href="">尹吉庆  科主任</a></p>
 										<p>上海医博肛泰医院 肛肠科</p>
 									</div>
 									<div class="clear"></div>
@@ -630,7 +630,7 @@
 							<div class="news_ct_t">
 								<a href=""><img src="./images/sy_news.jpg" /></a>
 								<div class="news_txt fr">
-									<h6><a href="">上海医博肛泰医院</a></h6>
+									<h6><a href="">1上海医博肛泰医院</a></h6>
 									<p>有丰富的硒元素以 及不饱和性的脂肪酸， 具有很好的改善机体免 疫功能...<a href="">[详细]</a></p>
 								</div>
 								<div class="clear"></div>
@@ -650,7 +650,7 @@
 							<div class="news_ct_t">
 								<a href=""><img src="./images/sy_news.jpg" /></a>
 								<div class="news_txt fr">
-									<h6><a href="">上海医博肛泰医院</a></h6>
+									<h6><a href="">2上海医博肛泰医院</a></h6>
 									<p>有丰富的硒元素以 及不饱和性的脂肪酸， 具有很好的改善机体免 疫功能...<a href="">[详细]</a></p>
 								</div>
 								<div class="clear"></div>
