--- a/yhz/index.html
+++ b/yhz/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link type="text/css" rel="stylesheet" href="css/style.css" />
-<script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="./js/js.js"></script>
 </head>
 <body>
