--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
 <base target="_blank"/>
 </head>
 <body>
-<iframe style="width: 100%;height: 750px;" src="http://com.zoosnet.net/LR/Chatpre.aspx?id=com40125390&lng=cn">
+<iframe style="width: 100%;height: 750px;" src="http://baidu.com">
 <div class="zylogo">
   <p><!--<i class="btnOpenMenu">更多</i>--></p>
   <p><a href="http://3g.shybgtyy.com"><img src="http://3g.shybgtyy.com/static/images/sylogo.png" alt=""></a></p>
